static/scss/search-page.scss
@import "../../node_modules/searchkit/theming/components";

.learners-search {
  width: 97%;
  margin: 0 auto;
  max-width: 1400px;

  .centered {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .fullwidth {
    width: 100%;
    overflow: visible;

    &.results-padding {
      padding: 0 24px 30px;
    }
  }

  // remove padding and margin from MDL layout components
  .no-padding {
    .mdl-grid, .mdl-cell {
      padding: 0;
      margin: 0;
    }
  }

  .search-sidebar {
    display: flex;
    flex-direction: column;
    background-color: none;

    div.sticky {
      top: 10px !important;
    }

    .Select-placeholder {
      top: 1px;
      padding-left: 10px;
      font-size: 15px;
    }

    .mdl-card {
      padding: 10px;
      background-color: #ffffff;
    }

    // Search facet sections
    .sk-panel,
    .sk-hierarchical-menu-list,
    .sk-hierarchical-refinement-list {
      padding-left: 5px;
      width: 100%;
    }

    // Search facet headers
    .sk-panel__header,
    .sk-hierarchical-menu-list__header,
    .sk-hierarchical-refinement-list__header {
      margin: 15px 5px 10px 0;
      font-size: 14px;
      font-weight: 500;
      color: $font-black;
    }

    // Search facet content blocks
    .sk-panel__content,
    .sk-hierarchical-menu-list__root,
    .sk-hierarchical-refinement-list__root {
      margin-right: 10px;
    }

    // Search facet option text and count
    .sk-panel__content .sk-item-list-option__text,
    .sk-panel__content .sk-item-list-option__count,
    .sk-hierarchical-menu-list__root .sk-hierarchical-menu-option__text,
    .sk-hierarchical-menu-list__root .sk-hierarchical-menu-option__count,
    .sk-hierarchical-refinement-list__root .sk-hierarchical-refinement-option__text,
    .sk-hierarchical-refinement-list__root .sk-hierarchical-refinement-option__count {
      color: $font-gray;
    }

    // Search facet option text
    .sk-item-list-option__text,
    .sk-hierarchical-menu-option__text {
      margin-right: 15px;
    }

    .sk-panel .sk-panel__content {
      .sk-item-list {
        > div {
          align-items: stretch;
        }

        input[type=checkbox] + .sk-item-list-option__text {
          margin-left: 10px;
        }
      }
    }

    .sk-hierarchical-menu-list .sk-hierarchical-menu-list__root {
      .sk-hierarchical-menu-option >div {
        justify-content: space-between;
      }

      .sk-hierarchical-menu-list__hierarchical-options > div {
        align-items: stretch;
      }
    }

    .filter-visibility-toggle.closed {
      margin-bottom: 0;

      i.closed {
        transform: rotate(0.75turn);
      }

      .sk-panel__content,
      .sk-hierarchical-menu-list__root,
      .sk-hierarchical-refinement-list__root {
        display: none;
      }
    }

    .filter-visibility-toggle {
      display: flex;
      flex-direction: row;
      margin-bottom: 10px;

      i {
        cursor: pointer;
        padding-top: 12px;
      }
    }

    .filter--courses {
      .sk-item-list-option {
        margin-bottom: 8px;

        .sk-item-list-option__text {
          margin-top: 2px;
          line-height: 1.3;
        }
      }
    }

    .filter--grade-average {
      .sk-panel__content {
        padding-right: 25px;
      }

      .sk-range-histogram > * {
        background-color: $histogramgrey;
      }

      .sk-range-histogram__bar {
        background-color: $mm-brand-bg-light;
      }

      .is-out-of-bounds {
        background-color: $medgrey;
      }

      .rc-slider-step {
        background-color: #d0d0d0;
      }

      .rc-slider-handle {
        border-color: $medgrey;
      }

      .rc-slider-mark-text {
        color: $medgrey;
        background-color: transparent;
      }
    }
  }

  .mm-filters {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 10px 0 0 8px !important;

    &:empty {
      display: none;
    }
  }

  .search-header {
    padding-top: 22px;
    padding-bottom: 5px;
    border-bottom: 1px solid $border-color;
    width: 100%;

    > * {
      display: flex;
      flex-direction: row;
      align-items: center;
    }

    .pagination-search {
      justify-content: flex-end;

      .sk-pagination-navigation {
        display: flex;
        align-items: center;
        margin-left: 10px;
        height: 30px;

        .sk-toggle {
          max-height: none;
        }

        .sk-toggle-option {
          background: #f5f5f5;
          padding: 5px 6px;
          border-color: $border-color;

          i.material-icons {
            position: relative;
            bottom: 1px;
          }
        }
      }

      .sk-pagination-navigation * {
        font-size: 14px;
        font-weight: normal;
        color: rgba(0,0,0,0.8);

        &.sk-toggle-height {
          text-align: center;
          vertical-align: middle;
          height: 30px !important;
        }

        .sk-pagination-option * {
          font-size: 21px;
          font-weight: 400;

          padding: 0 0 !important;
        }
      }
    }

    .sk-search-box form {
      border: 1px solid $border-color;
      border-radius: 3px;
      margin-right: 4px;

      input.sk-search-box__text {
        padding: 6px 10px;
        font-size: 15px;
      }

      .sk-search-box__action {
        height: 32px;
      }

      .sk-search-box__icon {
        opacity: 1;
        margin: 6px 0 0 7px;
      }

      .sk-search-box__loader {
        margin: 6px;
      }

      .sk-search-box__icon:before {
        /* background-image from background-images.css */
        background-position: top left;
        background-repeat: no-repeat;
      }
    }

    .sk-selected-filters {
      margin-left: -8px;
    }

    .sk-selected-filters-option {
      background-color: $bg-light-gray;
      padding: 6px 10px;
      font-size: 13px;
      margin-bottom: 0;

      .sk-selected-filters-option__remove-action {
        border-left: none;
        padding: 0;
        font-weight: 300;
      }
    }

    .sk-selected-filters-option > div {
      color: rgba(0,0,0,.7);
    }

    .sk-reset-filters {
      color: $link-text;
      font-size: 14px;
      font-weight: 300;
      padding: 4px;
    }

    .mdl-cell {
      margin-top: 0;
      margin-bottom: 0;
      padding: 0;
    }

    .result-info {
      justify-content: flex-start;
      margin-left: 0;
    }

    .result-info > span {
      white-space: nowrap;
      font-size: 13px;
      font-weight: 300;
      padding-left: 15px;
      color: $font-gray;
      height: 36px;
      align-items: center;
      display: flex;
    }

    .learner-actions {
      justify-content: flex-end;

      div:first-child {
        margin-right: 10px;
      }

      div > i {
        padding-right: 5px;
      }
    }

    .sorting-header {
      margin: 0;

      .sorting-row {
        width: 100%;
        padding: 30px 0 9px;
        text-transform: uppercase;
        font-size: 12px;
        color: $font-gray-light;

        .selected {
          color: $font-black;
          font-weight: 400;
        }

        .mdl-cell {
          cursor: pointer;
          user-select: none;
        }

        .grade {
          text-align: center;
        }
      }
    }
  }

  .learner-results {
    width: 100%;

    .learner-result:last-child {
      border-bottom: none;
    }

    .learner-result .mdl-cell {
      display: flex;
    }

    .learner-result {
      padding: 9px 0;
      font-size: 14px;
      position: relative;
      border-bottom: 1px solid $border-color;

      .learner-name {
        display: flex;
        flex-direction: column;

        .display-name {
          font-size: 15px;
          font-weight: 500;
        }

        .user-name {
          color: $font-gray-light;
          font-size: 13px;
        }
      }

      .learner-location {
        color: $font-gray;
        font-size: 14px;
        font-weight: 300;
      }

      .learner-grade span {
        text-align: center;
      }

      .learner-grade {
        display: flex;
        flex-direction: column;
        justify-content: center;

        .percent {
          font-size: 19px;
          font-weight: 500;
          margin-bottom: 4px;
        }

        .hint {
          font-size: 12px;
          font-weight: 300;
          color: $font-gray;
        }
      }

      .rounded-profile-image {
        height: 37px;
      }
    }

    .learner-result:hover {
      background: $bg-light-gray;
    }
  }
}

.no-hits {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  background-color: #efefef;
  margin: 30px 0 4px 0;
  height: 300px;
  color: #848484;
  font-style: italic;
  font-weight: 200;

  &.left-nav {
    margin: 19px 6px 22px 6px;
    font-size: 14px;
    padding: 0 75px;
  }
}

.highlight {
  background-color: #fdfcd2;
  font-weight: 700;
}

